--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -3,6 +3,8 @@
 /* //device/apps/common/assets/res/any/strings.xml
 **
 ** Copyright 2006, The Android Open Source Project
+** Copyright 2015-2016, Preetam J. D'Souza
+** Copyright 2016, The Maru OS Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -5749,4 +5751,12 @@ ul.</string>
     <string name="config_pdp_reject_service_not_subscribed"></string>
     <!-- pdp data reject dialog string for cause 55 (MULTI_CONN_TO_SAME_PDN_NOT_ALLOWED) [CHAR LIMIT=100] -->
     <string name="config_pdp_reject_multi_conn_to_same_pdn_not_allowed"></string>
+
+    <!-- maru -->
+    <string name="desktop_notification_title_starting">Maru Desktop starting...</string>
+    <string name="desktop_notification_title_stopping">Maru Desktop stopping...</string>
+    <string name="desktop_notification_title_running">Maru Desktop running</string>
+    <string name="desktop_notification_msg">Touch to manage desktop settings.</string>
+    <!-- /maru -->
+
 </resources>
